Modified parsing file using Files